# 410_SciVis

./: .gitignore  .gitignore.txt  HW1
FinalProj/: GPX_to_3D.py  GPX_to_C.py  README.txt  pointArray.c
project1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj1
project2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj2  proj2.cxx
project3/: CMakeLists.txt  proj3.cxx
project4/: Makefile  cmake_install.cmake  proj4  proj4.cxx
project5/: CMakeLists.txt  proj5.cxx
project6/mc410/: svn-commit.tmp  tricase.cxx
project6/mc410/.svn/: wc.db
project7/: Makefile  cmake_install.cmake  proj7  proj7.cxx
project8/: proj8.cxx
